<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:id="@+id/layout" >

    <RelativeLayout
        android:id="@+id/title_indicator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey" >

        <Button
            android:id="@+id/prompt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_bg_selector"
            android:text="@string/prompt_back"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/prompt_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="3dip"
            android:paddingTop="3dip"
            android:text="@string/prompt_dlg_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <View
        android:id="@+id/indicator"
        android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:layout_below="@+id/title_indicator"
        android:background="@color/mix_yellow" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indicator"
        android:background="@drawable/list_item_bg_normal" >

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/prompt_msg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="10dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="10dip"
                android:text="@string/prompt_dlg_msg_first_page"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scroll_view" >

            <Button
                android:id="@+id/prompt_prev_month"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_weight="0.1"
                android:background="@drawable/btn_bg_selector"
                android:text="@string/prompt_btn_prev_month"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/prompt_remove_ad"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_weight="0.1"
                android:background="@drawable/btn_bg_selector"
                android:text="@string/prompt_remove_ad"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/prompt_next_month"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_weight="0.1"
                android:background="@drawable/btn_bg_selector"
                android:text="@string/prompt_btn_next_month"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>