<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/op"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="@color/grey"
    android:paddingBottom="4dip"
    android:paddingLeft="7dip"
    android:paddingRight="7dip"
    android:paddingTop="7dip"
    android:visibility="visible" >

    <Button
        android:id="@+id/prev_month"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_margin="3dip"
        android:layout_weight="0.1"
        android:background="@drawable/btn_bg_selector"
        android:text="@string/prompt_btn_prev_month"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/share"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_margin="3dip"
        android:layout_weight="0.1"
        android:background="@drawable/btn_bg_selector"
        android:text="@string/share"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/next_month"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_margin="3dip"
        android:layout_weight="0.1"
        android:background="@drawable/btn_bg_selector"
        android:text="@string/prompt_btn_next_month"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>